# SlicerRadiomics

./: CMakeLists.txt  CTestConfig.cmake  LICENSE.txt  README.md  SuperBuild.cmake  USAGE.md
SlicerRadiomics/: CMakeLists.txt  SlicerRadiomics.py  SlicerRadiomicsCLI.xml
SlicerRadiomicsCLI/: CMakeLists.txt  SlicerRadiomicsCLI  SlicerRadiomicsCLI.bat  SlicerRadiomicsCLI.py  SlicerRadiomicsCLI.xml  SlicerRadiomicsCLIScript
SuperBuild/: External_python-pyradiomics.cmake  External_python-pyyaml.cmake
cmake/: SlicerRadiomicsAddCLI.cmake
